# django_configurator

./: .gitignore  README.rst  manage.py  requirements.txt  setup.cfg  setup.py
configurator/: exceptions.py  utils.py
configurator/management/: __init__.py
configurator/management/commands/: __init__.py  configure.py
configurator/templates/: apache_conf.conf  base.sh  db_config.sh  db_install.sh  db_pre_install_checks.sh  pip.conf  postgres.sh  project.conf  server_install.sh  setup.sh
configurator/utils/: __init__.py  database.py  pip_config.py  server.py  utils.py
django_configurator/: settings.py  urls.py  wsgi.py
