[metadata]
name = django_configurator
author = Stephane Poss
author-email = stephposs@gmail.com
summary = Install and configure a django project for Xample
description-file = README.rst
home-page = http://airnavigation.aero
license = Other::Proprietary
classifier =
  Intended Audience :: Developers
  Natural Language :: English
  Programming Language :: Python :: 2
  Programming Language :: Python :: 2.7
keywords =
    setup
    distutils
[files]
packages =
    configurator
    django_configurator
